# giraf-imagegen

./: Dockerfile  README.md  pyproject.toml
giraf_imagegen/: config.py  pipeline.py  server.py
